use system fonts to avoid scrolling table header misalignment

--- a/atf_eregs/static/regulations/css/less/typography.less
+++ b/atf_eregs/static/regulations/css/less/typography.less
@@ -564,8 +564,7 @@ table {
     padding: 0;
     font-size: .75em;
     table-layout: auto;
-    width: 100%;
-    font-family: @body-font;
+    font-family: Helvetica Neue,Helvetica,Arial,sans-serif;
 }
 
 th,
@@ -573,10 +572,11 @@ td {
     padding: 15px;
     line-height: 20px;
     border: 1px solid @80_gray;
+    font-weight:normal;
 }
 
 th {
-    font-weight: 600;
+    font-weight: bold;
     font-style: normal;
     text-align: left;
 }
